# rustic

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: breaking_changes.yml  release.yaml
benches/: bench_backup.rs
crates/rustic_core/: Cargo.toml
crates/rustic_core/examples/: backup.rs  config.rs  merge.rs  restore.rs
crates/rustic_core/fuzz/: Cargo.toml  TODO.md
crates/rustic_core/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/rustic_core/src/: archiver.rs  backend.rs  blob.rs  chunker.rs  domain.rs  error.rs  id.rs  index.rs  lib.rs  progress.rs  repofile.rs  repository.rs
crates/rustic_core/src/archiver/: file_archiver.rs  parent.rs  tree.rs  tree_archiver.rs
crates/rustic_core/src/backend/: cache.rs  choose.rs  decrypt.rs  dry_run.rs  hotcold.rs  ignore.rs  local.rs  node.rs  rclone.rs  rest.rs  stdin.rs
crates/rustic_core/src/blob/: packer.rs  tree.rs
crates/rustic_core/src/commands/: backup.rs  cat.rs  check.rs  config.rs  copy.rs  dump.rs  forget.rs  init.rs  key.rs  merge.rs  prune.rs  repoinfo.rs  restore.rs  snapshots.rs
crates/rustic_core/src/commands/repair/: index.rs  snapshots.rs
crates/rustic_core/src/crypto/: aespoly1305.rs
crates/rustic_core/src/index/: binarysorted.rs  indexer.rs
crates/rustic_core/src/repofile/: configfile.rs  indexfile.rs  keyfile.rs  packfile.rs  snapshotfile.rs
crates/rustic_core/src/repository/: warm_up.rs
src/: application.rs  commands.rs  config.rs  lib.rs
src/commands/: backup.rs  cat.rs  copy.rs  diff.rs  ls.rs  merge.rs  prune.rs  restore.rs  start.rs
tests/: acceptance.rs
