[package]
name = "rustic_core"
version = "0.1.0"
edition = "2021"
description = """
fast, encrypted, deduplicated backups powered by Rust
"""
authors = ["Alexander Weiss"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["backup", "restic", "deduplication", "encryption"]
# categories = []

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
harness = true
edition = "2021"

[profile.release]
strip = true

[dependencies]
# errors
displaydoc = "0.2.3"
thiserror = "1"

# macros
derive_more = "0.99"
derivative = "2"
lazy_static = "1"    # TODO: once_cell?
log = "0.4"
# parallelize
crossbeam-channel = "0.5"
rayon = "1"
pariter = "0.5"
#crypto
aes256ctr_poly1305aes = "0.1"
rand = "0.8"
scrypt = { version = "0.11", default-features = false }
# chunker / packer
# cdc = "0.1"
integer-sqrt = "0.1"
# serialization
binrw = "0.11"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["serde_derive"] }
serde_with = { version = "2.3", features = ["base64"] }
serde_json = "1"
serde-aux = "4"
# other dependencies
bytes = "1"
chrono = { version = "0.4", default_features = false, features = [
    "clock",
    "serde",
] }
zstd = "0.12"
enum-map = "2"
enum-map-derive = "0.11"
self_update = { version = "0.36", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }
# local backend
walkdir = "2"
ignore = "0.4"
nix = "0.26"
filetime = "0.2"
aho-corasick = "1"
# rest backend
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "blocking",
] }
backoff = "0.4"
# rclone backend
semver = "1"
# cache
dirs = "5"
cachedir = "0.3"

[target.'cfg(not(windows))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }
users = "0.11"

[target.'cfg(windows)'.dependencies]
# unfortunately, the asm extensions do not build on MSVC, see https://github.com/RustCrypto/asm-hashes/issues/17
sha2 = "0.10"

[target.'cfg(not(any(windows, target_os="openbsd")))'.dependencies]
xattr = "1"

[dev-dependencies]
rstest = "0.17"
quickcheck = "1"
quickcheck_macros = "1"
